--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,9 +5,9 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --color-primary: #6366f1; /* Example color for primary */
-  --color-secondary: #f97316; /* Example color for secondary */
-  --color-info: #3b82f6; /* Example color for info */
+  --color-primary: #619c44;
+  --color-secondary: #6594d0;
+  --color-info: #3b82f6;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -25,9 +25,9 @@
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 238.7, 83.5%, 66.7%;
+    --primary: 108 54% 56%;
     --primary-foreground: 0 0% 98%;
-    --secondary: 25, 95%, 53%;
+    --secondary: 213 53% 61%;
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
@@ -37,7 +37,7 @@
     --destructive-foreground: 0 0% 98%;
     --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
+    --ring: 108 54% 56%;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
@@ -53,9 +53,9 @@
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 238.7, 83.5%, 66.7%;
+    --primary: 108 54% 56%;
     --primary-foreground: 0 0% 9%;
-    --secondary: 25, 95%, 53%;
+    --secondary: 213 53% 61%;
     --secondary-foreground: 0 0% 98%;
     --muted: 0 0% 14.9%;
     --muted-foreground: 0 0% 63.9%;
@@ -65,7 +65,7 @@
     --destructive-foreground: 0 0% 98%;
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
+    --ring: 108 54% 56%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
