--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
   --background: #ffffff;
   --foreground: #171717;
   --color-primary: #619c44;
-  --color-secondary: #6594d0;
+  --color-secondary: #3b74bf;
   --color-info: #3b82f6;
 }
 
