--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,5 +76,6 @@
   body {
     @apply bg-background text-foreground;
     font-family: Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
   }
 }
